Adjusted the native test for Micronaut 4